--- a/GigHub/GigHub.csproj
+++ b/GigHub/GigHub.csproj
@@ -231,8 +231,11 @@
     <Compile Include="Migrations\201607240520518_AddForeignKeyPropertiesToGig.Designer.cs">
       <DependentUpon>201607240520518_AddForeignKeyPropertiesToGig.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201609140812316_AddNameToApplicationUser.cs" />
+    <Compile Include="Migrations\201609140812316_AddNameToApplicationUser.Designer.cs">
+      <DependentUpon>201609140812316_AddNameToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\FutureDate.cs" />
     <Compile Include="Models\FutureTime.cs" />
@@ -242,7 +245,16 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\ExternalLoginConfirmationViewModel.cs" />
+    <Compile Include="ViewModels\ExternalLoginListViewModel.cs" />
+    <Compile Include="ViewModels\ForgotPasswordViewModel.cs" />
+    <Compile Include="ViewModels\ForgotViewModel.cs" />
     <Compile Include="ViewModels\GigFormViewModel.cs" />
+    <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\RegisterViewModel.cs" />
+    <Compile Include="ViewModels\ResetPasswordViewModel.cs" />
+    <Compile Include="ViewModels\SendCodeViewModel.cs" />
+    <Compile Include="ViewModels\VerifyCodeViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -337,6 +349,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201607240520518_AddForeignKeyPropertiesToGig.resx">
       <DependentUpon>201607240520518_AddForeignKeyPropertiesToGig.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201609140812316_AddNameToApplicationUser.resx">
+      <DependentUpon>201609140812316_AddNameToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
